# chyoneebnb-backend

./: README.md  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detail_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py  0002_initial.py  0003_rename_price_house_price_per_night.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_rating.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_amenity_options_alter_room_amenities.py  0003_room_category.py
users/: admin.py  models.py  serializers.py
users/migrations/: 0001_initial.py  0002_user_bio_user_is_host_user_job_user_location_and_more.py  0002_user_nickname_alter_user_avatar.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_experiences_alter_wishlist_rooms.py
